2002-04-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_JNI_LIBS): Update the JDK
	detection macro to support blackdown JDK 1.3
	releases for Linux on architectures other than
	i386.

2002-04-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_JNI_LIBS): Update the JDK
	detection macro to support Sun JDK 1.3 and 1.4
	under Linux. Emit an error if no known jvm
	configuration can be found.

2002-04-13  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/Expression.java (ExprLex):
	Check that a token starts with a digit before
	passing it to strtod. This avoids a costly
	runtime exception and leads to a 4x speedup
	in some trivial examples.

2002-04-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/AfterCmd.java (processTimerEvent,
	processIdleEvent):
	* src/jacl/tcl/lang/Interp.java (eval):
	* src/jacl/tcl/lang/PackageCmd.java (pkgRequire):
	* src/jacl/tcl/lang/Shell.java (run):
	* src/jacl/tcl/lang/SocketConnectionEvent.java (processEvent):
	* src/tclblend/tcl/lang/Interp.java (eval, recordAndEval):
	Pass TCL.EVAL_GLOBAL instead of TCL.GLOBAL_ONLY to
	eval() functions. Fixup docs that suggest using the
	wrong form.

2002-04-12  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/FileCmd.java (copyRenameOneFile):
	Treat data copied via 'file copy' as binary. Fix
	array bound bug that was causing the copy command
	to fail. Fixup error message when too few arguments
	are passed to the 'file join' command.

2002-04-12  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/FileCmd.java (cmdProc):
	Implement 'file volumes' command using the JDK 1.2
	method File.listRoots(). Reflection is used to preserve
	backward compatibility with JDK 1.1 systems. Fixed
	number of args check so that 'file volumes' can be run.

2002-04-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/EncodingCmd.java: Map the
	Tcl "identity" encoding to "UTF8" in Java. While