@@ -825,11 +825,11 @@ AC_DEFUN([AC_JAVA_JNI_LIBS], [
                 D=`dirname $ac_java_jvm_dir/$F`
                 ac_java_jvm_jni_lib_runtime_path=$D
                 ac_java_jvm_jni_lib_flags="-L$D -ljava -lverify"
-                #D=$ac_java_jvm_dir/jre/lib/i386/classic
-                D=$ac_java_jvm_dir/jre/lib/i386/client
+                #D=$ac_java_jvm_dir/jre/lib/$machine/classic
+                D=$ac_java_jvm_dir/jre/lib/$machine/client
                 ac_java_jvm_jni_lib_runtime_path="${ac_java_jvm_jni_lib_runtime_path}:$D"
                 ac_java_jvm_jni_lib_flags="$ac_java_jvm_jni_lib_flags -L$D -ljvm"
-                D=$ac_java_jvm_dir/jre/lib/i386/native_threads
+                D=$ac_java_jvm_dir/jre/lib/$machine/native_threads
                 ac_java_jvm_jni_lib_runtime_path="${ac_java_jvm_jni_lib_runtime_path}:$D"
                 ac_java_jvm_jni_lib_flags="$ac_java_jvm_jni_lib_flags -L$D -lhpi"
             fi
